Relations operators, misc. related work.
Relations operators were added to CorpusQL, including one to match root relations and a negation.

Inline tags are now captured and included in the response, with tag name and attributes.

Also:
- Fix MatchFilterCompare.hashCode/equals.
- Fix SpanQueryRelations.equals/hashCode.
- Fix AND/[] bug. Add regex/any rel op.
- AND optimization: remove match all if all clauses same length.
- Fix AND/[] optimization, RelationSpanAdjust bug.
- Various optimizations. Improve guarantees.
- Add -v option (verbose) to QueryTool.
- Fix HitPropertyCaptureGroup.
- CoNLL-U: show line number on error.
- Fix NPE in QueryTool.
- Fix relation class prefix only applying to part of regex.
- Fix rel() not sorting clauses.
- Refactor SpanQueryAndNot.rewrite(). Lift captures.
- SpansConstraint should ask only for clause's match info.
- Fix group by capture by retrieving from FI directly.
- Document query rewriting.
- Fixes, assertions.
- Clear atFirstInCurrentDocument in twoPhaseCurrentDocumentMatches().
- More consistenly name atFirstInCurrentDocument.
- Bugfix in SpansSequenceWithGap constructor.
- Added assertions to Spans classes.
- Fix bug with rspan if no relations matched.